apps/generic/overlays/calibre/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre
spec:
  template:
    spec:
      containers:
        - name: container
          image: docker.io/linuxserver/calibre:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: yasr-volume
              mountPath: /config
              subPath: configs/calibre/
            - name: main-volume
              mountPath: /books
              subPath: public/Books/
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 10
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: dunno
              containerPort: 8081
              protocol: TCP
            - name: unknown
              containerPort: 8181
              protocol: TCP
