apps/generic/overlays/calibre/patches/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
